impove writing style